--- a/ex3/html/add_user_form.html
+++ b/ex3/html/add_user_form.html
@@ -16,7 +16,7 @@
 
 <body>
 
-    <div class="col-sm-6 col-sm-offset-2">
+    <div class="col-sm-4 col-sm-offset-4">
 
         <h1>add new user</h1>
 
@@ -25,43 +25,42 @@
 
             <!-- NAME -->
             <div id="name-group" class="form-group">
-                <label for="name">Trip's Id</label>
-                <input type="text" class="form-control" name="name" id="username" placeholder="write name here"
+                <label for="trip_id">Trip's Id</label>
+                <input type="text" class="form-control" name="id_field" id="id_field" placeholder="write trip's Id here"
                     required>
                 <!-- errors will go here -->
             </div>
 
             <!-- ID -->
             <div id="name-group" class="form-group">
-                <label for="id">Departure Date</label>
-                <input type="text" class="form-control" name="id_field" id="id_field" placeholder="write id here"
-                    required>
+                <label for="duration">Departure Date</label>
+                <input type="date" class="form-control" name="start_date" id="start_date"
+                    placeholder="write departure date here" required>
                 <!-- errors will go here -->
             </div>
 
             <!-- password -->
             <div id="name-group" class="form-group">
-                <label for="password">Trip's Duration</label>
-                <input type="password" class="form-control" name="password" id="password"
-                    placeholder="write password here" required>
+                <label for="duration">Trip's Duration</label>
+                <input type="number" class="form-control" name="Duration" id="Duration"
+                    placeholder="write trip's duration here" required>
                 <!-- errors will go here -->
             </div>
 
 
             <!-- profession -->
             <div id="name-group" class="form-group">
-                <label for="profession">Trip's Cost</label>
-                <input type="text" class="form-control" name="profession" id="profession"
-                    placeholder="write profession here">
+                <label for="price">Trip's Cost</label>
+                <input type="number" class="form-control" name="price" id="price" placeholder="write trip's cost here">
                 <!-- errors will go here -->
             </div>
 
             <!-- EMAIL -->
-            <div id="email-group" class="form-group">
+            <!-- <div id="email-group" class="form-group">
                 <label for="email">Email</label>
-                <input type="text" class="form-control" name="email" placeholder="rudd@avengers.com">
-                <!-- errors will go here -->
-            </div>
+                <input type="text" class="form-control" name="email" placeholder="rudd@avengers.com"> -->
+            <!-- errors will go here -->
+            <!-- </div> -->
 
 
 
