REquired field done on the add_user html
We have to do the back-end dev

--- a/ex3/html/add_user_form.html
+++ b/ex3/html/add_user_form.html
@@ -52,7 +52,7 @@
             <!-- profession -->
             <div id="name-group" class="form-group">
                 <label for="price">Trip's Cost</label>
-                <input type="number" class="form-control" name="price" id="price" placeholder="write trip's cost here">
+                <input type="number" class="form-control" name="price" id="price" placeholder="write trip's cost here" required>
                 <!-- errors will go here -->
             </div>
 
@@ -60,7 +60,7 @@
             <!-- Guide name -->
             <div id="name-group" class="form-group">
                 <label for="gname">Guide name</label>
-                <input type="text" class="form-control" name="id_field" id="gname" placeholder="write guide name here"
+                <input type="text" class="form-control" name="gname" id="gname" placeholder="write guide name here"
                     required>
                 <!-- errors will go here -->
             </div>
@@ -68,7 +68,7 @@
             <!-- NAME -->
             <div id="name-group" class="form-group">
                 <label for="gemail">Guide's email</label>
-                <input type="text" class="form-control" name="id_field" id="gemail"
+                <input type="text" class="form-control" name="gemail" id="gemail"
                     placeholder="write guide's email here" required>
                 <!-- errors will go here -->
             </div>
@@ -76,7 +76,7 @@
             <!-- NAME -->
             <div id="name-group" class="form-group">
                 <label for="gcell">Guide's cellular</label>
-                <input type="number" class="form-control" name="id_field" id="gcell"
+                <input type="number" class="form-control" name="gcell" id="gcell"
                     placeholder="write guide's cell number here" required>
                 <!-- errors will go here -->
             </div>
