Miriam's reception hour
index.html changes to have the key
General explication

--- a/ex3/html/add_user_form.html
+++ b/ex3/html/add_user_form.html
@@ -52,7 +52,8 @@
             <!-- profession -->
             <div id="name-group" class="form-group">
                 <label for="price">Trip's Cost</label>
-                <input type="number" class="form-control" name="price" id="price" placeholder="write trip's cost here" required>
+                <input type="number" class="form-control" name="price" id="price" placeholder="write trip's cost here"
+                    required>
                 <!-- errors will go here -->
             </div>
 
@@ -68,8 +69,8 @@
             <!-- NAME -->
             <div id="name-group" class="form-group">
                 <label for="gemail">Guide's email</label>
-                <input type="text" class="form-control" name="gemail" id="gemail"
-                    placeholder="write guide's email here" required>
+                <input type="text" class="form-control" name="gemail" id="gemail" placeholder="write guide's email here"
+                    required>
                 <!-- errors will go here -->
             </div>
 
