--- a/ex3/html/index.html
+++ b/ex3/html/index.html
@@ -3,12 +3,22 @@
 
 <head>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="myCss/client.css">
+
   <script>
     $(document).ready(function () {
       $("button").click(function () {
         $.ajax({
           url: "/users",
+          type: 'get',
           success: function (result) {
+            const test = { a: 1, b: 2, c: 3 };
+
+            for (const [key, value] of Object.entries(result)) {
+              console.log("key: " + key);
+            }
+
+            console.log("size" + result.Europe1.duration);
             $("#div1").html(JSON.stringify(result));
             console.log(result);
           },
@@ -30,6 +40,7 @@
   </div>
 
   <button>Get External Content</button>
+  <button id=Find_countries>Find</button>
 
 </body>
 
