--- a/ex3/html/add_user_form.html
+++ b/ex3/html/add_user_form.html
@@ -5,7 +5,8 @@
 <head>
     <title>ADD user</title>
     <!-- <link rel="stylesheet" href="css/User_tool_design.css" /> -->
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="myCss/client.css">
     <!-- load bootstrap via CDN -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js
     "></script> <!-- load jquery via CDN -->
@@ -16,17 +17,17 @@
 
 <body>
 
-    <div class="col-sm-4 col-sm-offset-4">
-
-        <h1>add new user</h1>
-
-        <!-- OUR FORM -->
+    <div class="first">
+        <h2>add new trip</h2>
+    </div>
+    <!-- OUR FORM -->
+    <div class="container">
         <form id="user_form" name="user_form" method="POST">
 
 
             <!-- NAME -->
             <div id="name-group" class="form-group">
-                <label for="trip_id">Trip's Id</label>
+                <label for="trip_id">Trip's Id:</label>
                 <input type="text" class="form-control" name="id_field" id="id_field" placeholder="write trip's Id here"
                     required>
                 <!-- errors will go here -->
@@ -34,7 +35,7 @@
 
             <!-- ID -->
             <div id="name-group" class="form-group">
-                <label for="duration">Departure Date</label>
+                <label for="duration">Departure Date:</label>
                 <input type="date" class="form-control" name="start_date" id="start_date"
                     placeholder="write departure date here" required>
                 <!-- errors will go here -->
@@ -42,7 +43,7 @@
 
             <!-- password -->
             <div id="name-group" class="form-group">
-                <label for="duration">Trip's Duration</label>
+                <label for="duration">Trip's Duration:</label>
                 <input type="number" class="form-control" name="Duration" id="Duration"
                     placeholder="write trip's duration here" required>
                 <!-- errors will go here -->
@@ -51,7 +52,7 @@
 
             <!-- profession -->
             <div id="name-group" class="form-group">
-                <label for="price">Trip's Cost</label>
+                <label for="price">Trip's Cost:</label>
                 <input type="number" class="form-control" name="price" id="price" placeholder="write trip's cost here"
                     required>
                 <!-- errors will go here -->
@@ -60,7 +61,7 @@
 
             <!-- Guide name -->
             <div id="name-group" class="form-group">
-                <label for="gname">Guide name</label>
+                <label for="gname">Guide name:</label>
                 <input type="text" class="form-control" name="gname" id="gname" placeholder="write guide name here"
                     required>
                 <!-- errors will go here -->
@@ -68,7 +69,7 @@
 
             <!-- NAME -->
             <div id="name-group" class="form-group">
-                <label for="gemail">Guide's email</label>
+                <label for="gemail">Guide's email:</label>
                 <input type="text" class="form-control" name="gemail" id="gemail" placeholder="write guide's email here"
                     required>
                 <!-- errors will go here -->
@@ -76,7 +77,7 @@
 
             <!-- NAME -->
             <div id="name-group" class="form-group">
-                <label for="gcell">Guide's cellular</label>
+                <label for="gcell">Guide's cellular:</label>
                 <input type="number" class="form-control" name="gcell" id="gcell"
                     placeholder="write guide's cell number here" required>
                 <!-- errors will go here -->
@@ -95,11 +96,12 @@
 
 
 
-            <button type="submit" class="btn btn-success">Submit <span class="fa fa-arrow-right"></span></button>
+            <button type="submit" class="btn ">Submit <span class="submit"></span></button>
+            <input type="button" class="btn " value="Back" onclick="backToMain()">
 
         </form>
-
     </div>
+
 </body>
 
 </html>
