--- a/ex3/html/add_location.html
+++ b/ex3/html/add_location.html
@@ -2,12 +2,13 @@
 <html>
 
 <head>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <link rel="stylesheet" href="myCss/client.css">
-  <script src="js/index.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="myCss/client.css">
+    <script src="js/index.js"></script>
 
 
 </head>
+
 <body>
 
     <div class="first">
@@ -21,8 +22,8 @@
             <!-- NAME -->
             <div id="name-group" class="form-group">
                 <label for="name_location">Name Of The Location:</label>
-                <input type="text" class="form-control" name="location_name" id="location_name" placeholder="write Location's Name here"
-                    required size=23px>
+                <input type="text" class="form-control" name="location_name" id="location_name"
+                    placeholder="write Location's Name here" required size=23px>
                 <!-- errors will go here -->
             </div>
 
