--- a/ex3/html/add_location.html
+++ b/ex3/html/add_location.html
@@ -5,12 +5,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="myCss/client.css">
     <script src="js/index.js"></script>
-
-
 </head>
 
-<body>
 
+<body>
     <div class="first">
         <h2>Add New Location</h2>
     </div>
@@ -21,7 +19,7 @@
 
             <!-- NAME -->
             <div id="name-group" class="form-group">
-                <label for="name_location">Name Of The Location:</label>
+                <label for="name_location">start_date:</label>
                 <input type="text" class="form-control" name="location_name" id="location_name"
                     placeholder="write Location's Name here" required size=23px>
                 <!-- errors will go here -->
