Update_tour done
Update tour done with id params url

--- a/ex3/html/add_location.html
+++ b/ex3/html/add_location.html
@@ -3,8 +3,8 @@
 
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="myCss/client.css">
-    <script src="js/index.js"></script>
+    <link rel="stylesheet" href="/myCss/client.css">
+    <script src="/js/index.js"></script>
 </head>
 
 
