--- a/ex3/html/update_data.html
+++ b/ex3/html/update_data.html
@@ -5,7 +5,7 @@
 <head>
     <title>ADD user</title>
 
-    <link rel="stylesheet" href="myCss/client.css">
+    <link rel="stylesheet" href="/myCss/client.css">
     <!-- load bootstrap via CDN -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js
     "></script> <!-- load jquery via CDN -->
