--- a/ex3/html/index.html
+++ b/ex3/html/index.html
@@ -42,7 +42,7 @@
     </table>
     <br>
 
-    <button id=Adding_new_Trip>Adding a new trip</button>
+    <button id=Adding_a_new_Trip>Adding a new trip</button>
     <!-- <input type="button" class="btn " value="Delete" onclick="deleteTrip()"> -->
 
     <!-- <input type="button" value="Generate a table!!!!!!!!!!!!!!!!!!!!!." onclick="generate_table()"> -->
