--- a/ex3/html/add_location.html
+++ b/ex3/html/add_location.html
@@ -3,8 +3,9 @@
 
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.min.js"></script>
     <link rel="stylesheet" href="/myCss/client.css">
-    <script src="/js/index.js"></script>
+    <script src="/js/add_location.js"></script>
 </head>
 
 
@@ -19,7 +20,7 @@
 
             <!-- NAME -->
             <div id="name-group" class="form-group">
-                <label for="name_location">start_date:</label>
+                <label for="name_location">Name:</label>
                 <input type="text" class="form-control" name="location_name" id="location_name"
                     placeholder="write Location's Name here" required size=23px>
                 <!-- errors will go here -->
