HTML and CSS modifs

--- a/ex3/html/index.html
+++ b/ex3/html/index.html
@@ -18,7 +18,7 @@
   <!-- <button>Get External Content</button> -->
 
 
-  <div class="container">
+  <div class="container1">
 
     <select name="sorts_type" id="sorts_type">
       <option value="ID">ID</option>
@@ -31,8 +31,12 @@
     <input type="radio" name="Increasing" id="Decreasing"> Decreasing
 
     <button class=sorts_type>Sort the Info</button>
-
+    <br>
+  </div>
+  <div class="container2">
     <button id=Adding_new_Trip>Adding a new trip</button>
+  </div>
+  <div class="container3">
     <table id="myTable2">
 
     </table>
@@ -43,10 +47,11 @@
     <br>
 
     <button id=Adding_a_new_Trip>Adding a new trip</button>
-    <!-- <input type="button" class="btn " value="Delete" onclick="deleteTrip()"> -->
-
-    <!-- <input type="button" value="Generate a table!!!!!!!!!!!!!!!!!!!!!." onclick="generate_table()"> -->
   </div>
+  <!-- <input type="button" class="btn " value="Delete" onclick="deleteTrip()"> -->
+
+  <!-- <input type="button" value="Generate a table!!!!!!!!!!!!!!!!!!!!!." onclick="generate_table()"> -->
+
 </body>
 
 </html>
