--- a/ex3/html/add_user_form.html
+++ b/ex3/html/add_user_form.html
@@ -26,14 +26,6 @@
 
             <!-- NAME -->
             <div id="name-group" class="form-group">
-                <label for="trip_id">Trip's Id:</label>
-                <input type="text" class="form-control" name="id_field" id="id_field" placeholder="write trip's Id here"
-                    required>
-                <!-- errors will go here -->
-            </div>
-
-            <!-- ID -->
-            <div id="name-group" class="form-group">
                 <label for="duration">Departure Date:</label>
                 <input type="date" class="form-control" name="start_date" id="start_date"
                     placeholder="write departure date here" required>
@@ -69,8 +61,8 @@
             <!-- NAME -->
             <div id="name-group" class="form-group">
                 <label for="gemail">Guide's email:</label>
-                <input type="text" class="form-control" name="gemail" id="gemail" placeholder="write guide's email here"
-                    required>
+                <input type="email" class="form-control" name="gemail" id="gemail"
+                    placeholder="write guide's email here" required>
                 <!-- errors will go here -->
             </div>
 
@@ -81,18 +73,6 @@
                     placeholder="write guide's cell number here" required>
                 <!-- errors will go here -->
             </div>
-
-
-
-
-
-            <!-- EMAIL -->
-            <!-- <div id="email-group" class="form-group">
-                <label for="email">Email</label>
-                <input type="text" class="form-control" name="email" placeholder="rudd@avengers.com"> -->
-            <!-- errors will go here -->
-            <!-- </div> -->
-
 
 
             <button type="submit" class="btn ">Submit<span class="submit"></span></button>
