--- a/ex3/html/createTour.html
+++ b/ex3/html/createTour.html
@@ -69,15 +69,15 @@
             <!-- NAME -->
             <div id="name-group" class="form-group">
                 <label for="gemail">Guide's email:</label>
-                <input type="text" class="form-control" name="gemail" id="gemail" placeholder="write guide's email here"
-                    required>
+                <input type="email" class="form-control" name="gemail" id="gemail"
+                    placeholder="write guide's email here" required>
                 <!-- errors will go here -->
             </div>
 
             <!-- NAME -->
             <div id="name-group" class="form-group">
                 <label for="gcell">Guide's cellular:</label>
-                <input type="number" class="form-control" name="gcell" id="gcell"
+                <input type="number" class="form-control" name="cellular" id="cellular"
                     placeholder="write guide's cell number here" required>
                 <!-- errors will go here -->
             </div>
