Server side verifs done !!

--- a/ex3/html/update_data.html
+++ b/ex3/html/update_data.html
@@ -44,7 +44,7 @@
 
             <!-- profession -->
             <div id="name-group" class="form-group">
-                <label for="price">Trip's Cost:</label>
+                <label for="price">Trip's Price:</label>
                 <input type="number" class="form-control" name="price" id="price" placeholder="write trip's cost here">
                 <!-- errors will go here -->
             </div>
