--- a/ex3/html/createTour.html
+++ b/ex3/html/createTour.html
@@ -51,7 +51,7 @@
 
             <!-- profession -->
             <div id="name-group" class="form-group">
-                <label for="price">Trip's Cost:</label>
+                <label for="price">Trip's Price:</label>
                 <input type="number" class="form-control" name="price" id="price" placeholder="write trip's cost here"
                     required>
                 <!-- errors will go here -->
