--- a/ex5/html/update_data.html
+++ b/ex5/html/update_data.html
@@ -49,30 +49,12 @@
                 <!-- errors will go here -->
             </div>
 
-
-            <!-- Guide name -->
             <div id="name-group" class="form-group">
-                <label for="gname">Guide name:</label>
-                <input type="text" class="form-control" name="gname" id="gname" placeholder="write guide name here">
-                <!-- errors will go here -->
-            </div>
+                <label for="guide">Guide's choice:</label>
+                <select class="form-control" name="guide" id="guide" placeholder="Choose your guide here" required>
 
-            <!-- NAME -->
-            <div id="name-group" class="form-group">
-                <label for="gemail">Guide's email:</label>
-                <input type="text" class="form-control" name="gemail" id="gemail"
-                    placeholder="write guide's email here">
-                <!-- errors will go here -->
+                </select>
             </div>
-
-            <!-- NAME -->
-            <div id="name-group" class="form-group">
-                <label for="gcell">Guide's cellular:</label>
-                <input type="number" class="form-control" name="gcell" id="gcell"
-                    placeholder="write guide's cell number here">
-                <!-- errors will go here -->
-            </div>
-
 
 
             <button type="submit" class="btn ">Submit<span class="submit"></span></button>
